plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-kube
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 32400
  selector:
    app: plex-kube
